spec/.test/config/invalid/not_array/extensions.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => 1,
    'tags' => [],
];
